--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -335,4 +335,7 @@ input[type="number"]::-webkit-outer-spin-button {
     margin-left: 555px;
     margin-top: -125px;
   }
+  .fr-name {
+    text-transform: uppercase;
+  }
 }
