--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -339,4 +339,36 @@ input[type="number"]::-webkit-outer-spin-button {
   .fr-name {
     text-transform: uppercase;
   }
+  .error-message {
+    display: flex;
+    margin-top: -5px;
+    margin-left: 255px;
+    font-size: 10px;
+    color: #ff5050;
+  }
+  .error-number {
+    display: flex;
+    margin-top: -5px;
+    margin-left: 255px;
+    font-size: 10px;
+    color: #ff5050;
+  }
+  .error-month {
+    width: 100%;
+    display: flex;
+    margin-top: 53px;
+    margin-left: -81px;
+    font-size: 10px;
+    color: #ff5050;
+    flex-direction: row;
+  }
+  .error-years {
+    width: 100%;
+    display: flex;
+    margin-top: 51px;
+    margin-left: -81px;
+    font-size: 10px;
+    color: #ff5050;
+    flex-direction: row;
+  }
 }
