--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -155,7 +155,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 50px;
+  margin-top: 25px;
   font-family: Space Grotesk;
   color: #21092f;
 }
@@ -231,6 +231,38 @@ input[type="number"]::-webkit-outer-spin-button {
   margin-top: 62px;
   position: absolute;
   margin-left: 216px;
+}
+.error-message {
+  display: flex;
+  margin-top: -5px;
+  margin-left: 239px;
+  font-size: 11px;
+  color: #ff5050;
+}
+.error-number {
+  display: flex;
+  margin-top: -5px;
+  margin-left: 240px;
+  font-size: 11px;
+  color: #ff5050;
+}
+.error-month {
+  width: 100%;
+  display: flex;
+  margin-top: 53px;
+  margin-left: -81px;
+  font-size: 11px;
+  color: #ff5050;
+  flex-direction: row;
+}
+.error-years {
+  width: 100%;
+  display: flex;
+  margin-top: 51px;
+  margin-left: -100px;
+  font-size: 11px;
+  color: #ff5050;
+  flex-direction: row;
 }
 
 @media only screen and (min-width: 1440px) {
